# AiNextIde

./: README.md  gradlew  settings.gradle
.github/workflows/: andorid.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  aapt2_jni.cpp
app/src/main/java/com/nextide/: MainActivity.java
app/src/main/java/com/nextide/adapter/: FileTreeAdapter.java  ProjectAdapter.java
app/src/main/java/com/nextide/dialog/: AiSettingsDialog.java  NewFileDialog.java  NewProjectDialog.java
app/src/main/java/com/nextide/fragment/: BuildLogFragment.java  EditorFragment.java  FileExplorerFragment.java
app/src/main/java/com/nextide/model/: BuildResult.java  FileNode.java  Project.java
app/src/main/java/com/nextide/util/: AiManager.java  FileUtils.java
app/src/main/res/drawable/: bg_language_badge.xml  bg_spinner.xml  ic_chevron_right.xml  ic_file_code.xml  ic_file_json.xml  ic_file_text.xml  ic_file_xml.xml  ic_folder.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  dialog_ai_settings.xml  dialog_new_file.xml  dialog_new_project.xml  fragment_build_log.xml  fragment_editor.xml  fragment_file_explorer.xml  item_file.xml  item_project.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
